feat: add login view

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <main id="root"></main>
-    <script type="module" src="/src/index.tsx"></script>
+    <script type="module" src="/src/main/index.tsx"></script>
   </body>
 </html>
